# AI-Analytics

./: .gitignore  CLAUDE.md  README.md  SPEC_detector_v020_daily_grain.md  SPEC_verifier_check2_persistence.md  SPEC_verifier_check6_seasonal_twin.md  pyproject.toml  reverify_004_summary.md
benchmark/: labels_v1_KEY.csv  labels_v1_TEMPLATE.csv  labels_v1_graham_TEMPLATE.csv  labels_v1_spec.md  labels_v2_TEMPLATE_ak.csv  labels_v2_TEMPLATE_r1.csv  labels_v2_TEMPLATE_r2.csv  labels_v2_TEMPLATE_r3.csv  labels_v2_TEMPLATE_se.csv  labels_v2_labeller_brief.md  labels_v2_spec.md  practice_ANSWERS.csv  practice_TEMPLATE.csv
scripts/: backfill_model05.py  reverify_004.py  reverify_all.py  sample_benchmark_v1.py  sample_practice_set.py  tracer_run.py  verify_batch.py
src/detector/: __init__.py  engine.py  events.py  verifier.py
tests/: test_deseasonalize.py  test_events.py  test_sample_benchmark_v1.py  test_sample_practice_set.py  test_verifier.py
