[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detector"
version = "0.3.0"
description = "Shared detector engine for the operational-intelligence portfolio (Blockthrough programmatic)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]